Updates UI, adds more functionality

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>Whatsapp Group Monitor</title>
+    <title>Whatsapp Monitor</title>
     <link rel="stylesheet" href="src/css/index.css">
   </head>
   <body>
     <span id="author">Created With ❤️ by  <a href="https://chibuikenwa.com">Chibuike 🔥</a></span>
     <div class="container">
-      <h1>Whatsapp Group Monitor</h1>
+      <h1>Whatsapp Monitor</h1>
       <section>
         <select placeholder="Group name" id="group_name" required>
             <option value="">Glorious Generals</option>
@@ -16,7 +16,7 @@
             <option value="">Group 4</option>
             <option value="">Favour Generals</option>
         </select>
-        <input type="text" placeholder="Your preferred response" id="response" required>
+        <textarea placeholder="Your preferred response(s) seperated by comma(Max 3)" id="response" required></textarea> 
       </section>
       
       <section>
