Implements getting chat names,sending to specified chat

--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <link rel="stylesheet" href="src/css/index.css">
   </head>
   <body>
-    <span id="author">Created With ❤️ by  <a href="https://chibuikenwa.com">Chibuike 🔥</a></span>
+    <span id="author">Created With Love by  <a href="https://chibuikenwa.com">Chibuike </a></span>
     <div class="container">
       <h1>Whatsapp Monitor</h1>
       <section>
-        <select placeholder="Group name" id="group_name" required>
-            <option value="">Glorious Generals</option>
-            <option value="">Group 2</option>
-            <option value="">Purity Generals</option>
-            <option value="">Group 4</option>
-            <option value="">Favour Generals</option>
+        <select placeholder="Group name" id="group_name" required disabled>
+        <option value="">Loading...</option>
+           
         </select>
         <textarea placeholder="Values seperated by comma(Max 10)" id="values" required></textarea> 
         <br/>
