--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <option value="">Loading...</option>
            
         </select>
-        <textarea placeholder="Values seperated by comma(Max 10)" id="values" required></textarea> 
+        <textarea placeholder="Values seperated by comma" id="values" required></textarea> 
         <br/>
-        <textarea placeholder="Your preferred response(s) seperated by comma(Max 3)" id="response" required></textarea> 
+        <textarea placeholder="Your preferred response(s) seperated by comma" id="response" required></textarea> 
       </section>
 
       <section> <div id="validation"></div> </section>
       <section>
-        <button id="status">Activate</button> 
+        <button id="kill">Kill All</button>  <button id="status">Activate</button> 
       </section>
      
     </div>
