Adds show active trackings,restricts tracking to only 1 chat

--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
 
       <section> <div id="validation"></div> </section>
       <section>
-        <button id="kill">Kill All</button>  <button id="status">Activate</button> 
+        <button id="kill">Kill All</button>  
+        <button id="status">Activate</button> 
+        <button id="show">Show Active</button> 
       </section>
-     
+      <table id="all_active">
+        <thead><th>S/N</th><th>Values</th><th>Response</th></thead>
+        <tbody>
+        </tbody>    
+      </table>
     </div>
     <script type="text/javascript" src="src/js/index.js"></script>
   </body>
