Implements single tracking removal, fixes bug

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="show">Show Active</button> 
       </section>
       <table id="all_active">
-        <thead><th>S/N</th><th>Values</th><th>Response</th></thead>
+        <thead><th>S/N</th><th>Values</th><th>Response</th><th></th></thead>
         <tbody>
         </tbody>    
       </table>
