fixed #3, fixed #4; Updates extension to v3, updates script to support new whatsapp version

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>Whatsapp Monitor</title>
+    <title>WhatsApp Monitor</title>
     <link rel="stylesheet" href="src/css/index.css">
   </head>
   <body>
     <span id="author">Created With Love by  <a href="https://chibuikenwa.com">Chibuike </a></span>
     <div class="container">
-      <h1>Whatsapp Monitor</h1>
+      <h1>WhatsApp Monitor</h1>
       <section>
         <select placeholder="Group name" id="group_name" required disabled>
         <option value="">Loading...</option>
